--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./server.js -e -js, -hbs"
+    "dev": "nodemon -e .js, .hbs ./servers.js" 
   },
   "keywords": [],
   "author": "",
