file upload for artists / need to do the same for labels .env in .gitignore

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGODB_URI  = mongodb://127.0.0.1/lab-artist
-PORT = 3000 
+PORT = 3000
+CLOUDINARY_NAME = hagegepatrick
+CLOUDINARY_KEY = 412889146533543
+CLOUDINARY_SECRET = Vkl2LtSzfe9ICPVXOVGiLEX8DJk
