--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.28.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "hbs": "^4.2.0",
     "mongoose": "^6.1.5",
+    "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.15",
     "path": "^0.12.7"
   }
